--- a/MVVM/Views/PagPrincView.xaml
+++ b/MVVM/Views/PagPrincView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AdministradorTareas.MVVM.Views.PagPrincView"
+             x:Name="PaginaPrincipal"
              Title="Página Principal">
     <VerticalStackLayout>
         <Label 
@@ -10,14 +11,15 @@
             HorizontalOptions="Center"
             x:Name="etiqueta" />
 
-        <CollectionView ItemsSource="{Binding Categoria}">
+        <CollectionView ItemsSource="{Binding Categoria}" SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Label Text="{Binding NombreCategoria}"></Label>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        <Button Clicked="Button_Clicked">Siguiente</Button>
+        
+        <Button Clicked="Button_Clicked" Text="Siguiente"></Button>
 
     </VerticalStackLayout>
 </ContentPage>
