--- a/MVVM/Views/PagSecView.xaml
+++ b/MVVM/Views/PagSecView.xaml
@@ -2,27 +2,45 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AdministradorTareas.MVVM.Views.PagSecView"
-             Title="Página Secundaria">
-    <VerticalStackLayout>
+             x:Name="PaginaSecundaria"
+             Title="Añadir nueva tarea">
+    
+    <VerticalStackLayout Spacing="15"
+                         Padding="10">
+
+        <Label Text="Selecciona una categoría: " FontAttributes="Bold" Margin="0,10,0,0" />
 
         <CollectionView x:Name="ListaSelec"
+            ItemsSource="{Binding Categoria}"
             SelectionMode="Single"
-            ItemsSource="{Binding Categoria}">
+            HeightRequest="70">
+
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Horizontal"
+                                   ItemSpacing="20"/>
+            </CollectionView.ItemsLayout>
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Label Text="{Binding NombreCategoria}"></Label>
+                    <HorizontalStackLayout Padding="5" WidthRequest="140" HeightRequest="60" VerticalOptions="Center">
+                        <RadioButton 
+                            Content="{Binding NombreCategoria}"
+                            Value="{Binding IDCategoria}"
+                            GroupName="CategoriaGrupo"
+                            IsChecked="{Binding BindingContext.CategoriaSeleccionadaID,
+                            Source={x:Reference PaginaSecundaria},
+                            Mode=TwoWay,
+                            Converter={StaticResource EqualsConverter}}"/>
+                    </HorizontalStackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <Label Text="Introduce el nombre de la tarea: "></Label>
+        <Label Text="Introduce el nombre de la tarea: " FontAttributes="Bold" Margin="0, 10, 0, 0"></Label>
 
-        <Entry Placeholder="Tarea 1..."
+        <Entry Placeholder="Introduce aquí el nombre de tu nueva tarea"
                Text=""
-               x:Name="CuadroTexto">
+               x:Name="CuadroTexto" />
 
-        </Entry>
-            
     </VerticalStackLayout>
 </ContentPage>
