--- a/MVVM/Views/PagSecView.xaml
+++ b/MVVM/Views/PagSecView.xaml
@@ -4,25 +4,18 @@
              x:Class="AdministradorTareas.MVVM.Views.PagSecView"
              x:Name="PaginaSecundaria"
              Title="Añadir nueva tarea">
-    
+
     <VerticalStackLayout Spacing="15"
                          Padding="10">
 
         <Label Text="Selecciona una categoría: " FontAttributes="Bold" Margin="0,10,0,0" />
 
         <CollectionView x:Name="ListaSelec"
-            ItemsSource="{Binding Categoria}"
-            SelectionMode="Single"
-            HeightRequest="70">
-
-            <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Horizontal"
-                                   ItemSpacing="20"/>
-            </CollectionView.ItemsLayout>
+            ItemsSource="{Binding Categoria}">
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <HorizontalStackLayout Padding="5" WidthRequest="140" HeightRequest="60" VerticalOptions="Center">
+                    <HorizontalStackLayout Padding="5" VerticalOptions="Center">
                         <RadioButton 
                             Content="{Binding NombreCategoria}"
                             Value="{Binding IDCategoria}"
